c-tds-sintaxis.output
Gramática

    0 $accept: program $end

    1 program: list_var_decl list_method_decl
    2        | list_method_decl
    3        | list_var_decl
    4        | %empty

    5 list_var_decl: var_decl
    6              | list_var_decl var_decl

    7 list_method_decl: method_decl
    8                 | method_decl list_method_decl

    9 var_decl: type ID ';'
   10         | type ID ',' AuxId

   11 AuxId: ID ';'
   12      | ID ',' AuxId

   13 method_decl: type ID '(' ')' block
   14            | type ID '(' TypeID ')' block
   15            | VOID ID '(' ')' block
   16            | VOID ID '(' TypeID ')' block

   17 TypeID: type ID
   18       | type ID ',' TypeID

   19 block: '{' list_var_decl list_statament '}'
   20      | '{' list_statament '}'
   21      | '{' list_var_decl '}'
   22      | '{' '}'

   23 list_statament: statament
   24               | statament list_statament

   25 type: INT
   26     | BOOLEAN

   27 statament: ID ASIGN expr ';'
   28          | method_call ';'
   29          | IF '(' expr ')' block ELSE block
   30          | IF '(' expr ')' block
   31          | WHILE '(' expr ')' block
   32          | RETURN expr ';'
   33          | RETURN ';'
   34          | ';'
   35          | block

   36 method_call: ID '(' ')'
   37            | ID '(' AuxExpr ')'

   38 AuxExpr: expr
   39        | expr ',' AuxExpr

   40 expr: ID
   41     | method_call
   42     | literal
   43     | expr MAS expr
   44     | expr MULT expr
   45     | expr MENOS expr
   46     | expr DIV expr
   47     | expr MOD expr
   48     | expr MENOR expr
   49     | expr MAYOR expr
   50     | expr IGUAL expr
   51     | expr AND expr
   52     | expr OR expr
   53     | MENOS expr
   54     | NOT expr
   55     | '(' expr ')'

   56 literal: INT_LITERAL
   57        | bool_literal

   58 bool_literal: TRUE
   59             | FALSE


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 13 14 15 16 29 30 31 36 37 55
')' (41) 13 14 15 16 29 30 31 36 37 55
',' (44) 10 12 18 39
';' (59) 9 11 27 28 32 33 34
'{' (123) 19 20 21 22
'}' (125) 19 20 21 22
error (256)
ID (258) 9 10 11 12 13 14 15 16 17 18 27 36 37 40
INT_LITERAL (259) 56
BOOLEAN (260) 26
ELSE (261) 29
FALSE (262) 59
IF (263) 29 30
INT (264) 25
RETURN (265) 32 33
TRUE (266) 58
VOID (267) 15 16
WHILE (268) 31
MAS (269) 43
MENOS (270) 45 53
MULT (271) 44
DIV (272) 46
MOD (273) 47
MAYOR (274) 49
MENOR (275) 48
ASIGN (276) 27
IGUAL (277) 50
AND (278) 51
OR (279) 52
NOT (280) 54
UMINUS (281)


No terminales con las reglas donde aparecen

$accept (33)
    en la izquierda: 0
program (34)
    en la izquierda: 1 2 3 4, en la derecha: 0
list_var_decl (35)
    en la izquierda: 5 6, en la derecha: 1 3 6 19 21
list_method_decl (36)
    en la izquierda: 7 8, en la derecha: 1 2 8
var_decl (37)
    en la izquierda: 9 10, en la derecha: 5 6
AuxId (38)
    en la izquierda: 11 12, en la derecha: 10 12
method_decl (39)
    en la izquierda: 13 14 15 16, en la derecha: 7 8
TypeID (40)
    en la izquierda: 17 18, en la derecha: 14 16 18
block (41)
    en la izquierda: 19 20 21 22, en la derecha: 13 14 15 16 29 30
    31 35
list_statament (42)
    en la izquierda: 23 24, en la derecha: 19 20 24
type (43)
    en la izquierda: 25 26, en la derecha: 9 10 13 14 17 18
statament (44)
    en la izquierda: 27 28 29 30 31 32 33 34 35, en la derecha: 23
    24
method_call (45)
    en la izquierda: 36 37, en la derecha: 28 41
AuxExpr (46)
    en la izquierda: 38 39, en la derecha: 37 39
expr (47)
    en la izquierda: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55,
    en la derecha: 27 29 30 31 32 38 39 43 44 45 46 47 48 49 50 51
    52 53 54 55
literal (48)
    en la izquierda: 56 57, en la derecha: 42
bool_literal (49)
    en la izquierda: 58 59, en la derecha: 57


Estado 0

    0 $accept: . program $end

    BOOLEAN  desplazar e ir al estado 1
    INT      desplazar e ir al estado 2
    VOID     desplazar e ir al estado 3

    $default  reduce usando la regla 4 (program)

    program           ir al estado 4
    list_var_decl     ir al estado 5
    list_method_decl  ir al estado 6
    var_decl          ir al estado 7
    method_decl       ir al estado 8
    type              ir al estado 9


Estado 1

   26 type: BOOLEAN .

    $default  reduce usando la regla 26 (type)


Estado 2

   25 type: INT .

    $default  reduce usando la regla 25 (type)


Estado 3

   15 method_decl: VOID . ID '(' ')' block
   16            | VOID . ID '(' TypeID ')' block

    ID  desplazar e ir al estado 10


Estado 4

    0 $accept: program . $end

    $end  desplazar e ir al estado 11


Estado 5

    1 program: list_var_decl . list_method_decl
    3        | list_var_decl .
    6 list_var_decl: list_var_decl . var_decl

    BOOLEAN  desplazar e ir al estado 1
    INT      desplazar e ir al estado 2
    VOID     desplazar e ir al estado 3

    $default  reduce usando la regla 3 (program)

    list_method_decl  ir al estado 12
    var_decl          ir al estado 13
    method_decl       ir al estado 8
    type              ir al estado 9


Estado 6

    2 program: list_method_decl .

    $default  reduce usando la regla 2 (program)


Estado 7

    5 list_var_decl: var_decl .

    $default  reduce usando la regla 5 (list_var_decl)


Estado 8

    7 list_method_decl: method_decl .
    8                 | method_decl . list_method_decl

    BOOLEAN  desplazar e ir al estado 1
    INT      desplazar e ir al estado 2
    VOID     desplazar e ir al estado 3

    $default  reduce usando la regla 7 (list_method_decl)

    list_method_decl  ir al estado 14
    method_decl       ir al estado 8
    type              ir al estado 15


Estado 9

    9 var_decl: type . ID ';'
   10         | type . ID ',' AuxId
   13 method_decl: type . ID '(' ')' block
   14            | type . ID '(' TypeID ')' block

    ID  desplazar e ir al estado 16


Estado 10

   15 method_decl: VOID ID . '(' ')' block
   16            | VOID ID . '(' TypeID ')' block

    '('  desplazar e ir al estado 17


Estado 11

    0 $accept: program $end .

    $default  aceptar


Estado 12

    1 program: list_var_decl list_method_decl .

    $default  reduce usando la regla 1 (program)


Estado 13

    6 list_var_decl: list_var_decl var_decl .

    $default  reduce usando la regla 6 (list_var_decl)


Estado 14

    8 list_method_decl: method_decl list_method_decl .

    $default  reduce usando la regla 8 (list_method_decl)


Estado 15

   13 method_decl: type . ID '(' ')' block
   14            | type . ID '(' TypeID ')' block

    ID  desplazar e ir al estado 18


Estado 16

    9 var_decl: type ID . ';'
   10         | type ID . ',' AuxId
   13 method_decl: type ID . '(' ')' block
   14            | type ID . '(' TypeID ')' block

    ';'  desplazar e ir al estado 19
    ','  desplazar e ir al estado 20
    '('  desplazar e ir al estado 21


Estado 17

   15 method_decl: VOID ID '(' . ')' block
   16            | VOID ID '(' . TypeID ')' block

    BOOLEAN  desplazar e ir al estado 1
    INT      desplazar e ir al estado 2
    ')'      desplazar e ir al estado 22

    TypeID  ir al estado 23
    type    ir al estado 24


Estado 18

   13 method_decl: type ID . '(' ')' block
   14            | type ID . '(' TypeID ')' block

    '('  desplazar e ir al estado 21


Estado 19

    9 var_decl: type ID ';' .

    $default  reduce usando la regla 9 (var_decl)


Estado 20

   10 var_decl: type ID ',' . AuxId

    ID  desplazar e ir al estado 25

    AuxId  ir al estado 26


Estado 21

   13 method_decl: type ID '(' . ')' block
   14            | type ID '(' . TypeID ')' block

    BOOLEAN  desplazar e ir al estado 1
    INT      desplazar e ir al estado 2
    ')'      desplazar e ir al estado 27

    TypeID  ir al estado 28
    type    ir al estado 24


Estado 22

   15 method_decl: VOID ID '(' ')' . block

    '{'  desplazar e ir al estado 29

    block  ir al estado 30


Estado 23

   16 method_decl: VOID ID '(' TypeID . ')' block

    ')'  desplazar e ir al estado 31


Estado 24

   17 TypeID: type . ID
   18       | type . ID ',' TypeID

    ID  desplazar e ir al estado 32


Estado 25

   11 AuxId: ID . ';'
   12      | ID . ',' AuxId

    ';'  desplazar e ir al estado 33
    ','  desplazar e ir al estado 34


Estado 26

   10 var_decl: type ID ',' AuxId .

    $default  reduce usando la regla 10 (var_decl)


Estado 27

   13 method_decl: type ID '(' ')' . block

    '{'  desplazar e ir al estado 29

    block  ir al estado 35


Estado 28

   14 method_decl: type ID '(' TypeID . ')' block

    ')'  desplazar e ir al estado 36


Estado 29

   19 block: '{' . list_var_decl list_statament '}'
   20      | '{' . list_statament '}'
   21      | '{' . list_var_decl '}'
   22      | '{' . '}'

    ID       desplazar e ir al estado 37
    BOOLEAN  desplazar e ir al estado 1
    IF       desplazar e ir al estado 38
    INT      desplazar e ir al estado 2
    RETURN   desplazar e ir al estado 39
    WHILE    desplazar e ir al estado 40
    ';'      desplazar e ir al estado 41
    '{'      desplazar e ir al estado 29
    '}'      desplazar e ir al estado 42

    list_var_decl   ir al estado 43
    var_decl        ir al estado 7
    block           ir al estado 44
    list_statament  ir al estado 45
    type            ir al estado 46
    statament       ir al estado 47
    method_call     ir al estado 48


Estado 30

   15 method_decl: VOID ID '(' ')' block .

    $default  reduce usando la regla 15 (method_decl)


Estado 31

   16 method_decl: VOID ID '(' TypeID ')' . block

    '{'  desplazar e ir al estado 29

    block  ir al estado 49


Estado 32

   17 TypeID: type ID .
   18       | type ID . ',' TypeID

    ','  desplazar e ir al estado 50

    $default  reduce usando la regla 17 (TypeID)


Estado 33

   11 AuxId: ID ';' .

    $default  reduce usando la regla 11 (AuxId)


Estado 34

   12 AuxId: ID ',' . AuxId

    ID  desplazar e ir al estado 25

    AuxId  ir al estado 51


Estado 35

   13 method_decl: type ID '(' ')' block .

    $default  reduce usando la regla 13 (method_decl)


Estado 36

   14 method_decl: type ID '(' TypeID ')' . block

    '{'  desplazar e ir al estado 29

    block  ir al estado 52


Estado 37

   27 statament: ID . ASIGN expr ';'
   36 method_call: ID . '(' ')'
   37            | ID . '(' AuxExpr ')'

    ASIGN  desplazar e ir al estado 53
    '('    desplazar e ir al estado 54


Estado 38

   29 statament: IF . '(' expr ')' block ELSE block
   30          | IF . '(' expr ')' block

    '('  desplazar e ir al estado 55


Estado 39

   32 statament: RETURN . expr ';'
   33          | RETURN . ';'

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    ';'          desplazar e ir al estado 62
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 65
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 40

   31 statament: WHILE . '(' expr ')' block

    '('  desplazar e ir al estado 68


Estado 41

   34 statament: ';' .

    $default  reduce usando la regla 34 (statament)


Estado 42

   22 block: '{' '}' .

    $default  reduce usando la regla 22 (block)


Estado 43

    6 list_var_decl: list_var_decl . var_decl
   19 block: '{' list_var_decl . list_statament '}'
   21      | '{' list_var_decl . '}'

    ID       desplazar e ir al estado 37
    BOOLEAN  desplazar e ir al estado 1
    IF       desplazar e ir al estado 38
    INT      desplazar e ir al estado 2
    RETURN   desplazar e ir al estado 39
    WHILE    desplazar e ir al estado 40
    ';'      desplazar e ir al estado 41
    '{'      desplazar e ir al estado 29
    '}'      desplazar e ir al estado 69

    var_decl        ir al estado 13
    block           ir al estado 44
    list_statament  ir al estado 70
    type            ir al estado 46
    statament       ir al estado 47
    method_call     ir al estado 48


Estado 44

   35 statament: block .

    $default  reduce usando la regla 35 (statament)


Estado 45

   20 block: '{' list_statament . '}'

    '}'  desplazar e ir al estado 71


Estado 46

    9 var_decl: type . ID ';'
   10         | type . ID ',' AuxId

    ID  desplazar e ir al estado 72


Estado 47

   23 list_statament: statament .
   24               | statament . list_statament

    ID      desplazar e ir al estado 37
    IF      desplazar e ir al estado 38
    RETURN  desplazar e ir al estado 39
    WHILE   desplazar e ir al estado 40
    ';'     desplazar e ir al estado 41
    '{'     desplazar e ir al estado 29

    $default  reduce usando la regla 23 (list_statament)

    block           ir al estado 44
    list_statament  ir al estado 73
    statament       ir al estado 47
    method_call     ir al estado 48


Estado 48

   28 statament: method_call . ';'

    ';'  desplazar e ir al estado 74


Estado 49

   16 method_decl: VOID ID '(' TypeID ')' block .

    $default  reduce usando la regla 16 (method_decl)


Estado 50

   18 TypeID: type ID ',' . TypeID

    BOOLEAN  desplazar e ir al estado 1
    INT      desplazar e ir al estado 2

    TypeID  ir al estado 75
    type    ir al estado 24


Estado 51

   12 AuxId: ID ',' AuxId .

    $default  reduce usando la regla 12 (AuxId)


Estado 52

   14 method_decl: type ID '(' TypeID ')' block .

    $default  reduce usando la regla 14 (method_decl)


Estado 53

   27 statament: ID ASIGN . expr ';'

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 76
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 54

   36 method_call: ID '(' . ')'
   37            | ID '(' . AuxExpr ')'

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63
    ')'          desplazar e ir al estado 77

    method_call   ir al estado 64
    AuxExpr       ir al estado 78
    expr          ir al estado 79
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 55

   29 statament: IF '(' . expr ')' block ELSE block
   30          | IF '(' . expr ')' block

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 80
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 56

   36 method_call: ID . '(' ')'
   37            | ID . '(' AuxExpr ')'
   40 expr: ID .

    '('  desplazar e ir al estado 54

    $default  reduce usando la regla 40 (expr)


Estado 57

   56 literal: INT_LITERAL .

    $default  reduce usando la regla 56 (literal)


Estado 58

   59 bool_literal: FALSE .

    $default  reduce usando la regla 59 (bool_literal)


Estado 59

   58 bool_literal: TRUE .

    $default  reduce usando la regla 58 (bool_literal)


Estado 60

   53 expr: MENOS . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 81
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 61

   54 expr: NOT . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 82
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 62

   33 statament: RETURN ';' .

    $default  reduce usando la regla 33 (statament)


Estado 63

   55 expr: '(' . expr ')'

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 83
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 64

   41 expr: method_call .

    $default  reduce usando la regla 41 (expr)


Estado 65

   32 statament: RETURN expr . ';'
   43 expr: expr . MAS expr
   44     | expr . MULT expr
   45     | expr . MENOS expr
   46     | expr . DIV expr
   47     | expr . MOD expr
   48     | expr . MENOR expr
   49     | expr . MAYOR expr
   50     | expr . IGUAL expr
   51     | expr . AND expr
   52     | expr . OR expr

    MAS    desplazar e ir al estado 84
    MENOS  desplazar e ir al estado 85
    MULT   desplazar e ir al estado 86
    DIV    desplazar e ir al estado 87
    MOD    desplazar e ir al estado 88
    MAYOR  desplazar e ir al estado 89
    MENOR  desplazar e ir al estado 90
    IGUAL  desplazar e ir al estado 91
    AND    desplazar e ir al estado 92
    OR     desplazar e ir al estado 93
    ';'    desplazar e ir al estado 94


Estado 66

   42 expr: literal .

    $default  reduce usando la regla 42 (expr)


Estado 67

   57 literal: bool_literal .

    $default  reduce usando la regla 57 (literal)


Estado 68

   31 statament: WHILE '(' . expr ')' block

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 95
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 69

   21 block: '{' list_var_decl '}' .

    $default  reduce usando la regla 21 (block)


Estado 70

   19 block: '{' list_var_decl list_statament . '}'

    '}'  desplazar e ir al estado 96


Estado 71

   20 block: '{' list_statament '}' .

    $default  reduce usando la regla 20 (block)


Estado 72

    9 var_decl: type ID . ';'
   10         | type ID . ',' AuxId

    ';'  desplazar e ir al estado 19
    ','  desplazar e ir al estado 20


Estado 73

   24 list_statament: statament list_statament .

    $default  reduce usando la regla 24 (list_statament)


Estado 74

   28 statament: method_call ';' .

    $default  reduce usando la regla 28 (statament)


Estado 75

   18 TypeID: type ID ',' TypeID .

    $default  reduce usando la regla 18 (TypeID)


Estado 76

   27 statament: ID ASIGN expr . ';'
   43 expr: expr . MAS expr
   44     | expr . MULT expr
   45     | expr . MENOS expr
   46     | expr . DIV expr
   47     | expr . MOD expr
   48     | expr . MENOR expr
   49     | expr . MAYOR expr
   50     | expr . IGUAL expr
   51     | expr . AND expr
   52     | expr . OR expr

    MAS    desplazar e ir al estado 84
    MENOS  desplazar e ir al estado 85
    MULT   desplazar e ir al estado 86
    DIV    desplazar e ir al estado 87
    MOD    desplazar e ir al estado 88
    MAYOR  desplazar e ir al estado 89
    MENOR  desplazar e ir al estado 90
    IGUAL  desplazar e ir al estado 91
    AND    desplazar e ir al estado 92
    OR     desplazar e ir al estado 93
    ';'    desplazar e ir al estado 97


Estado 77

   36 method_call: ID '(' ')' .

    $default  reduce usando la regla 36 (method_call)


Estado 78

   37 method_call: ID '(' AuxExpr . ')'

    ')'  desplazar e ir al estado 98


Estado 79

   38 AuxExpr: expr .
   39        | expr . ',' AuxExpr
   43 expr: expr . MAS expr
   44     | expr . MULT expr
   45     | expr . MENOS expr
   46     | expr . DIV expr
   47     | expr . MOD expr
   48     | expr . MENOR expr
   49     | expr . MAYOR expr
   50     | expr . IGUAL expr
   51     | expr . AND expr
   52     | expr . OR expr

    MAS    desplazar e ir al estado 84
    MENOS  desplazar e ir al estado 85
    MULT   desplazar e ir al estado 86
    DIV    desplazar e ir al estado 87
    MOD    desplazar e ir al estado 88
    MAYOR  desplazar e ir al estado 89
    MENOR  desplazar e ir al estado 90
    IGUAL  desplazar e ir al estado 91
    AND    desplazar e ir al estado 92
    OR     desplazar e ir al estado 93
    ','    desplazar e ir al estado 99

    $default  reduce usando la regla 38 (AuxExpr)


Estado 80

   29 statament: IF '(' expr . ')' block ELSE block
   30          | IF '(' expr . ')' block
   43 expr: expr . MAS expr
   44     | expr . MULT expr
   45     | expr . MENOS expr
   46     | expr . DIV expr
   47     | expr . MOD expr
   48     | expr . MENOR expr
   49     | expr . MAYOR expr
   50     | expr . IGUAL expr
   51     | expr . AND expr
   52     | expr . OR expr

    MAS    desplazar e ir al estado 84
    MENOS  desplazar e ir al estado 85
    MULT   desplazar e ir al estado 86
    DIV    desplazar e ir al estado 87
    MOD    desplazar e ir al estado 88
    MAYOR  desplazar e ir al estado 89
    MENOR  desplazar e ir al estado 90
    IGUAL  desplazar e ir al estado 91
    AND    desplazar e ir al estado 92
    OR     desplazar e ir al estado 93
    ')'    desplazar e ir al estado 100


Estado 81

   43 expr: expr . MAS expr
   44     | expr . MULT expr
   45     | expr . MENOS expr
   46     | expr . DIV expr
   47     | expr . MOD expr
   48     | expr . MENOR expr
   49     | expr . MAYOR expr
   50     | expr . IGUAL expr
   51     | expr . AND expr
   52     | expr . OR expr
   53     | MENOS expr .

    $default  reduce usando la regla 53 (expr)


Estado 82

   43 expr: expr . MAS expr
   44     | expr . MULT expr
   45     | expr . MENOS expr
   46     | expr . DIV expr
   47     | expr . MOD expr
   48     | expr . MENOR expr
   49     | expr . MAYOR expr
   50     | expr . IGUAL expr
   51     | expr . AND expr
   52     | expr . OR expr
   54     | NOT expr .

    $default  reduce usando la regla 54 (expr)


Estado 83

   43 expr: expr . MAS expr
   44     | expr . MULT expr
   45     | expr . MENOS expr
   46     | expr . DIV expr
   47     | expr . MOD expr
   48     | expr . MENOR expr
   49     | expr . MAYOR expr
   50     | expr . IGUAL expr
   51     | expr . AND expr
   52     | expr . OR expr
   55     | '(' expr . ')'

    MAS    desplazar e ir al estado 84
    MENOS  desplazar e ir al estado 85
    MULT   desplazar e ir al estado 86
    DIV    desplazar e ir al estado 87
    MOD    desplazar e ir al estado 88
    MAYOR  desplazar e ir al estado 89
    MENOR  desplazar e ir al estado 90
    IGUAL  desplazar e ir al estado 91
    AND    desplazar e ir al estado 92
    OR     desplazar e ir al estado 93
    ')'    desplazar e ir al estado 101


Estado 84

   43 expr: expr MAS . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 102
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 85

   45 expr: expr MENOS . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 103
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 86

   44 expr: expr MULT . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 104
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 87

   46 expr: expr DIV . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 105
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 88

   47 expr: expr MOD . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 106
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 89

   49 expr: expr MAYOR . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 107
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 90

   48 expr: expr MENOR . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 108
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 91

   50 expr: expr IGUAL . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 109
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 92

   51 expr: expr AND . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 110
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 93

   52 expr: expr OR . expr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63

    method_call   ir al estado 64
    expr          ir al estado 111
    literal       ir al estado 66
    bool_literal  ir al estado 67


Estado 94

   32 statament: RETURN expr ';' .

    $default  reduce usando la regla 32 (statament)


Estado 95

   31 statament: WHILE '(' expr . ')' block
   43 expr: expr . MAS expr
   44     | expr . MULT expr
   45     | expr . MENOS expr
   46     | expr . DIV expr
   47     | expr . MOD expr
   48     | expr . MENOR expr
   49     | expr . MAYOR expr
   50     | expr . IGUAL expr
   51     | expr . AND expr
   52     | expr . OR expr

    MAS    desplazar e ir al estado 84
    MENOS  desplazar e ir al estado 85
    MULT   desplazar e ir al estado 86
    DIV    desplazar e ir al estado 87
    MOD    desplazar e ir al estado 88
    MAYOR  desplazar e ir al estado 89
    MENOR  desplazar e ir al estado 90
    IGUAL  desplazar e ir al estado 91
    AND    desplazar e ir al estado 92
    OR     desplazar e ir al estado 93
    ')'    desplazar e ir al estado 112


Estado 96

   19 block: '{' list_var_decl list_statament '}' .

    $default  reduce usando la regla 19 (block)


Estado 97

   27 statament: ID ASIGN expr ';' .

    $default  reduce usando la regla 27 (statament)


Estado 98

   37 method_call: ID '(' AuxExpr ')' .

    $default  reduce usando la regla 37 (method_call)


Estado 99

   39 AuxExpr: expr ',' . AuxExpr

    ID           desplazar e ir al estado 56
    INT_LITERAL  desplazar e ir al estado 57
    FALSE        desplazar e ir al estado 58
    TRUE         desplazar e ir al estado 59
    MENOS        desplazar e ir al estado 60
    NOT          desplazar e ir al estado 61
    '('          desplazar e ir al estado 63
